--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -651,6 +651,11 @@ a {
     width: 28px;
     height: 28px;
     border-radius: 3px;
+    background-color: #F9F9F9;
+}
+
+.footer .social-link + .social-link {
+  margin-left: 16px;
 }
 
 .footer .social .social-link:hover {
