--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,21 +51,20 @@ a {
 /* ========FIXED HEADER ==================*/
 
 .fixed-header {
+  background: #e6f0ff;
+  padding-top: 28px;
   position: sticky;
+  top: -28px;
   z-index: 1;
-  top: -26px;
-  background-color: #E6F0FF;
-  padding-top: 26px;
 }
-
 
 /*======================= Header ====================*/
 
-.hero-header {
+.hero-wrap {
   display: flex;
   flex-direction: column;
   background: #e6f0ff;
-  height: 100vh;
+  height: calc(100vh - 90px);
   position: relative;
 }
 
@@ -196,7 +195,7 @@ a {
 
 .clients .image a:hover {
   border-radius: 12px;
-  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.10);
+  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.1);
 }
 
 /* ===================== Guides ============================ */
@@ -631,12 +630,12 @@ a {
 
 .footer .heading {
   color: #1c1c1d;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 2rem;
   font-weight: 700;
 }
 
-.footer .item a, 
+.footer .item a,
 .footer .desc {
   color: #7a7a7e;
   font-size: 1.6rem;
@@ -659,13 +658,13 @@ a {
 }
 
 .footer .social-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 28px;
-    height: 28px;
-    border-radius: 3px;
-    background-color: #F9F9F9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 28px;
+  height: 28px;
+  border-radius: 3px;
+  background-color: #f9f9f9;
 }
 
 .footer .social-link + .social-link {
@@ -685,4 +684,3 @@ a {
   font-size: 1.4rem;
   font-weight: 400;
 }
-
